# Rust-Google-Maps-Scraper

./: .gitignore  Cargo.toml  README.md
config/: log4rs.yaml
src/: error.rs  lib.rs  main.rs
src/models/: address.rs  coordinates.rs  mod.rs  place.rs  viewport.rs
src/services/: google_maps.rs  grid_generator.rs  mod.rs
src/utils/: http_client.rs  json_utils.rs  logger.rs  mod.rs
