[package]
name = "google_maps"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12", features = ["blocking", "json"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
futures = "0.3"
thiserror = "1.0"
log = "0.4"
env_logger = "0.10"
log4rs = "1.2"
dotenvy = "0.15"
